--- a/stylesheets/compiled/main.css
+++ b/stylesheets/compiled/main.css
@@ -111,10 +111,9 @@ a {
 
 .msg-modal {
   flex-direction: row;
-  position: absolute;
-  top: 100px;
-  left: 50%;
-  transform: translateX(-50%);
+  position: fixed;
+  top: 1rem;
+  left: 1rem;
   border: 2px solid white;
   background-color: green;
   border-radius: 8px;
@@ -198,7 +197,7 @@ a {
   width: 100%;
 }
 
-.checkouts, .loaners {
+.data-section {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
@@ -209,89 +208,89 @@ a {
   border-radius: 8px;
   gap: 1rem;
 }
-.checkouts h1, .checkouts h2, .checkouts h3, .loaners h1, .loaners h2, .loaners h3 {
+.data-section h1, .data-section h2, .data-section h3 {
   margin: 0;
 }
-.checkouts .filters, .loaners .filters {
+.data-section .filters {
   border: 2px solid lightgray;
   border-radius: 8px;
   width: 100%;
   padding: 1rem;
   gap: 0.75rem;
 }
-.checkouts .filters .section, .loaners .filters .section {
+.data-section .filters .section {
   gap: 1rem;
 }
-.checkouts .filters .section .filter-button, .loaners .filters .section .filter-button {
+.data-section .filters .section .filter-button {
   justify-content: center;
   align-items: center;
 }
-.checkouts .list, .loaners .list {
+.data-section .list {
   width: 100%;
   padding-bottom: 1rem;
   border-bottom: 1px solid lightgray;
   gap: 0.5rem;
 }
-.checkouts .list:last-child, .loaners .list:last-child {
+.data-section .list:last-child {
   padding-bottom: 0;
   border-bottom: none;
 }
-.checkouts .list .deleted-record, .loaners .list .deleted-record {
+.data-section .list .deleted-record {
   border: 2px solid #ca401d !important;
 }
-.checkouts .list .finished-record, .loaners .list .finished-record {
+.data-section .list .finished-record {
   border: 2px solid green !important;
 }
-.checkouts .list .started-record, .loaners .list .started-record {
+.data-section .list .started-record {
   border: 2px solid yellow !important;
 }
-.checkouts .list .record, .loaners .list .record {
+.data-section .list .record {
   width: 100%;
   gap: 0.5rem;
   padding: 0.5rem;
   background-color: #292524;
   border: 2px solid #ececec;
 }
-.checkouts .list .record .row-two, .checkouts .list .record .row-three, .checkouts .list .record .row-four, .loaners .list .record .row-two, .loaners .list .record .row-three, .loaners .list .record .row-four {
+.data-section .list .record .row-two, .data-section .list .record .row-three, .data-section .list .record .row-four {
   display: none;
 }
-.checkouts .list .record .row-one, .checkouts .list .record .row-two, .checkouts .list .record .row-three, .checkouts .list .record .row-four, .loaners .list .record .row-one, .loaners .list .record .row-two, .loaners .list .record .row-three, .loaners .list .record .row-four {
+.data-section .list .record .row-one, .data-section .list .record .row-two, .data-section .list .record .row-three, .data-section .list .record .row-four {
   justify-content: space-between;
   width: 100%;
 }
-.checkouts .list .record .row-one .recordID-input:focus, .checkouts .list .record .row-two .recordID-input:focus, .checkouts .list .record .row-three .recordID-input:focus, .checkouts .list .record .row-four .recordID-input:focus, .loaners .list .record .row-one .recordID-input:focus, .loaners .list .record .row-two .recordID-input:focus, .loaners .list .record .row-three .recordID-input:focus, .loaners .list .record .row-four .recordID-input:focus {
+.data-section .list .record .row-one .recordID-input:focus, .data-section .list .record .row-two .recordID-input:focus, .data-section .list .record .row-three .recordID-input:focus, .data-section .list .record .row-four .recordID-input:focus {
   border: none;
 }
-.checkouts .list .record .row-one input, .checkouts .list .record .row-one label, .checkouts .list .record .row-one .recordID-input, .checkouts .list .record .row-two input, .checkouts .list .record .row-two label, .checkouts .list .record .row-two .recordID-input, .checkouts .list .record .row-three input, .checkouts .list .record .row-three label, .checkouts .list .record .row-three .recordID-input, .checkouts .list .record .row-four input, .checkouts .list .record .row-four label, .checkouts .list .record .row-four .recordID-input, .loaners .list .record .row-one input, .loaners .list .record .row-one label, .loaners .list .record .row-one .recordID-input, .loaners .list .record .row-two input, .loaners .list .record .row-two label, .loaners .list .record .row-two .recordID-input, .loaners .list .record .row-three input, .loaners .list .record .row-three label, .loaners .list .record .row-three .recordID-input, .loaners .list .record .row-four input, .loaners .list .record .row-four label, .loaners .list .record .row-four .recordID-input {
+.data-section .list .record .row-one input, .data-section .list .record .row-one label, .data-section .list .record .row-one .recordID-input, .data-section .list .record .row-two input, .data-section .list .record .row-two label, .data-section .list .record .row-two .recordID-input, .data-section .list .record .row-three input, .data-section .list .record .row-three label, .data-section .list .record .row-three .recordID-input, .data-section .list .record .row-four input, .data-section .list .record .row-four label, .data-section .list .record .row-four .recordID-input {
   width: 16%;
   font-weight: bold;
   justify-content: center;
   align-items: center;
   text-align: center;
 }
-.checkouts .list .record .row-one label, .checkouts .list .record .row-two label, .checkouts .list .record .row-three label, .checkouts .list .record .row-four label, .loaners .list .record .row-one label, .loaners .list .record .row-two label, .loaners .list .record .row-three label, .loaners .list .record .row-four label {
+.data-section .list .record .row-one label, .data-section .list .record .row-two label, .data-section .list .record .row-three label, .data-section .list .record .row-four label {
   font-weight: normal !important;
   font-size: 70%;
   opacity: 0.8;
   color: orange;
 }
-.checkouts .list .record .row-one textarea, .checkouts .list .record .row-one .issue-textbox, .checkouts .list .record .row-two textarea, .checkouts .list .record .row-two .issue-textbox, .checkouts .list .record .row-three textarea, .checkouts .list .record .row-three .issue-textbox, .checkouts .list .record .row-four textarea, .checkouts .list .record .row-four .issue-textbox, .loaners .list .record .row-one textarea, .loaners .list .record .row-one .issue-textbox, .loaners .list .record .row-two textarea, .loaners .list .record .row-two .issue-textbox, .loaners .list .record .row-three textarea, .loaners .list .record .row-three .issue-textbox, .loaners .list .record .row-four textarea, .loaners .list .record .row-four .issue-textbox {
+.data-section .list .record .row-one textarea, .data-section .list .record .row-one .issue-textbox, .data-section .list .record .row-two textarea, .data-section .list .record .row-two .issue-textbox, .data-section .list .record .row-three textarea, .data-section .list .record .row-three .issue-textbox, .data-section .list .record .row-four textarea, .data-section .list .record .row-four .issue-textbox {
   width: 100%;
   height: 3rem;
   resize: vertical;
   font-family: Sans-serif, Helvetica;
 }
-.checkouts .list .record .row-one input, .checkouts .list .record .row-one .issue-textbox, .checkouts .list .record .row-two input, .checkouts .list .record .row-two .issue-textbox, .checkouts .list .record .row-three input, .checkouts .list .record .row-three .issue-textbox, .checkouts .list .record .row-four input, .checkouts .list .record .row-four .issue-textbox, .loaners .list .record .row-one input, .loaners .list .record .row-one .issue-textbox, .loaners .list .record .row-two input, .loaners .list .record .row-two .issue-textbox, .loaners .list .record .row-three input, .loaners .list .record .row-three .issue-textbox, .loaners .list .record .row-four input, .loaners .list .record .row-four .issue-textbox {
+.data-section .list .record .row-one input, .data-section .list .record .row-one .issue-textbox, .data-section .list .record .row-two input, .data-section .list .record .row-two .issue-textbox, .data-section .list .record .row-three input, .data-section .list .record .row-three .issue-textbox, .data-section .list .record .row-four input, .data-section .list .record .row-four .issue-textbox {
   padding: 0.5rem;
   color: white;
   background-color: transparent;
   border: none;
   outline: none;
 }
-.checkouts .list .record .row-one input:focus, .checkouts .list .record .row-one .issue-textbox:focus, .checkouts .list .record .row-two input:focus, .checkouts .list .record .row-two .issue-textbox:focus, .checkouts .list .record .row-three input:focus, .checkouts .list .record .row-three .issue-textbox:focus, .checkouts .list .record .row-four input:focus, .checkouts .list .record .row-four .issue-textbox:focus, .loaners .list .record .row-one input:focus, .loaners .list .record .row-one .issue-textbox:focus, .loaners .list .record .row-two input:focus, .loaners .list .record .row-two .issue-textbox:focus, .loaners .list .record .row-three input:focus, .loaners .list .record .row-three .issue-textbox:focus, .loaners .list .record .row-four input:focus, .loaners .list .record .row-four .issue-textbox:focus {
+.data-section .list .record .row-one input:focus, .data-section .list .record .row-one .issue-textbox:focus, .data-section .list .record .row-two input:focus, .data-section .list .record .row-two .issue-textbox:focus, .data-section .list .record .row-three input:focus, .data-section .list .record .row-three .issue-textbox:focus, .data-section .list .record .row-four input:focus, .data-section .list .record .row-four .issue-textbox:focus {
   border: 2px solid white;
 }
-.checkouts .list .record .record-controls, .loaners .list .record .record-controls {
+.data-section .list .record .record-controls {
   justify-content: flex-start;
   gap: 0.5rem;
 }/*# sourceMappingURL=main.css.map */
