--- a/stylesheets/src/main.scss
+++ b/stylesheets/src/main.scss
@@ -130,7 +130,7 @@ a {
 .options-list {
     position: absolute;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     left: 50%;
     top: 50%;
@@ -141,7 +141,8 @@ a {
     border: $object-border;
     border-radius: $b-med;
     max-height: 90vh;
-    overflow-y: scroll;
+    width: 75%;
+    height: 75%;
     #option-prompt {
         justify-content: center;
         align-items: center;
@@ -152,6 +153,41 @@ a {
         justify-content: center;
         align-items: center;
         gap: 1rem;
+        #sid-search {
+            position: relative;
+            .searched-students {
+                position: absolute;
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: flex-start;
+                top: calc(100% + 1px);
+                left: 50%;
+                transform: translate(-50%);
+                width: 120%;
+                max-width: 120%;
+                color: #292524;
+                gap: 1px;
+                .student {
+                    flex-direction: column;
+                    width: 100%;
+                    padding: 0.25rem;
+                    background-color: white;
+                    border: 1px solid red;
+                    border-radius: 5px;
+                    cursor: pointer;
+                    &:hover {
+                        border: 2px solid red;
+                    }
+                    .name {
+                        font-size: 90%;
+                    }
+                    .sid, .email {
+                        font-size: 75%;
+                        opacity: 0.5;
+                    }
+                }
+            }
+        }
     }
     .asset-tag-examples {
         display: none;
