--- a/stylesheets/compiled/main.css
+++ b/stylesheets/compiled/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 * {
   box-sizing: border-box;
 }
@@ -8,9 +9,14 @@
 }
 
 html, body {
-  font-family: Sans-serif, Helvetica !important;
-  background-color: #292524;
-  color: #ececec;
+  font-family: "Open Sans", sans-serif !important;
+  background-color: #ececec;
+  color: #292524;
+  font-weight: 400;
+}
+
+body {
+  margin: 0;
 }
 
 h1, h2, h3, h4, h5 {
@@ -47,10 +53,11 @@ a {
 
 .bg-blue {
   background-color: blue !important;
+  color: #ececec;
 }
 
 .bg-green {
-  background-color: greenyellow !important;
+  background-color: lime !important;
   color: black !important;
 }
 
@@ -125,8 +132,61 @@ a {
 
 .cb-input {
   padding: 0.5rem;
-  border: 2px solid lightgray;
+  border: 2px solid #0e0c0c;
   border-radius: 8px;
+}
+
+.navbar {
+  position: fixed;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  top: 0;
+  padding-inline: 1rem;
+  background-color: white;
+  border-bottom: 1px solid rgba(41, 37, 36, 0.5);
+  gap: 2rem;
+}
+.navbar .section {
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  gap: 1rem;
+}
+.navbar .section .subsection {
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+.navbar .section .subsection .nav-title, .navbar .section .subsection .nav-button, .navbar .section .subsection .nav-button-secondary {
+  padding: 0.5rem;
+  cursor: pointer;
+}
+.navbar .section .subsection .nav-title:hover, .navbar .section .subsection .nav-button:hover, .navbar .section .subsection .nav-button-secondary:hover {
+  background-color: #e6e6e6;
+}
+.navbar .section .subsection .nav-title {
+  font-size: 130%;
+  font-weight: 500;
+}
+.navbar .section .subsection .nav-button {
+  border: 1px solid rgb(63, 63, 218);
+}
+.navbar .section .subsection .nav-button, .navbar .section .subsection .nav-button-secondary {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-weight: 100;
+  font-size: 80%;
+  border-radius: 1000px;
+  padding: 5px;
+  padding-top: 4px;
+}
+.navbar .account-section {
+  justify-content: flex-end;
 }
 
 .options-list {
@@ -140,7 +200,7 @@ a {
   padding: 2rem;
   gap: 1rem;
   background-color: black;
-  border: 2px solid lightgray;
+  border: 2px solid #0e0c0c;
   border-radius: 8px;
   max-height: 90vh;
   width: 75%;
@@ -205,7 +265,7 @@ a {
 }
 .options-list .asset-tag-examples .img-container img {
   width: 100%;
-  border: 2px solid lightgray;
+  border: 2px solid #0e0c0c;
   border-radius: 8px;
 }
 .options-list .progressions {
@@ -219,13 +279,13 @@ a {
 .options-list .option {
   padding: 0.5rem;
   border-radius: 8px;
-  border: 2px solid lightgray;
+  border: 2px solid #0e0c0c;
   background-color: #ca401d;
   cursor: pointer;
 }
 .options-list .option:hover {
   padding: calc(0.5rem + 1px);
-  border: 1px solid #a0a0a0;
+  border: 1px solid black;
 }
 .options-list .pages {
   flex-direction: row;
@@ -240,7 +300,7 @@ a {
   width: 90%;
   padding: 2rem;
   background-color: black;
-  border: 2px solid lightgray;
+  border: 2px solid #0e0c0c;
   border-radius: 8px;
   gap: 1rem;
 }
@@ -248,7 +308,7 @@ a {
   margin: 0;
 }
 .data-section .filters {
-  border: 2px solid lightgray;
+  border: 2px solid #0e0c0c;
   border-radius: 8px;
   width: 100%;
   padding: 1rem;
@@ -284,8 +344,8 @@ a {
   width: 100%;
   gap: 0.5rem;
   padding: 0.5rem;
-  background-color: #292524;
-  border: 2px solid #ececec;
+  background-color: #ececec;
+  border: 2px solid #292524;
 }
 .data-section .list .record .row-two, .data-section .list .record .row-three, .data-section .list .record .row-four {
   display: none;
@@ -314,7 +374,7 @@ a {
   width: 100%;
   height: 3rem;
   resize: vertical;
-  font-family: Sans-serif, Helvetica;
+  font-family: "Open Sans", sans-serif;
 }
 .data-section .list .record .row-one input, .data-section .list .record .row-one .issue-textbox, .data-section .list .record .row-two input, .data-section .list .record .row-two .issue-textbox, .data-section .list .record .row-three input, .data-section .list .record .row-three .issue-textbox, .data-section .list .record .row-four input, .data-section .list .record .row-four .issue-textbox {
   padding: 0.5rem;
@@ -329,4 +389,60 @@ a {
 .data-section .list .record .record-controls {
   justify-content: flex-start;
   gap: 0.5rem;
+}
+
+.new-device-form {
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 85%;
+  background-color: white;
+  border: 1px solid rgba(41, 37, 36, 0.5);
+  padding: 1rem;
+}
+.new-device-form .submissions {
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+}
+.new-device-form .submissions .record-section {
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  gap: 0.25rem;
+}
+.new-device-form .submissions .record-section .record-label {
+  opacity: 0.75;
+}
+.new-device-form .submissions .record-section .record-input, .new-device-form .submissions .record-section .record-label {
+  width: 12.5%;
+  padding: 0.25rem;
+  font-size: 90% !important;
+}
+.new-device-form .submissions .record-section .record-input {
+  border-radius: 2px;
+  border: 1px solid rgba(255, 0, 0, 0.5);
+}
+.new-device-form .submissions .record-section .record-input:active, .new-device-form .submissions .record-section .record-input:focus {
+  outline: 1px solid red;
+}
+.new-device-form .submissions .record-section .record-input::-moz-placeholder {
+  font-size: 90% !important;
+}
+.new-device-form .submissions .record-section .record-input::placeholder {
+  font-size: 90% !important;
+}
+.new-device-form .submissions .record-section .item-number {
+  justify-content: center;
+  align-items: center;
+}
+.new-device-form .form-controls {
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: flex-end;
+  padding-top: 1rem;
+  width: 100%;
+  gap: 1rem;
 }/*# sourceMappingURL=main.css.map */
