--- a/stylesheets/compiled/main.css
+++ b/stylesheets/compiled/main.css
@@ -185,6 +185,27 @@ a {
   padding: 5px;
   padding-top: 4px;
 }
+.navbar .section .subsection .nav-user {
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.navbar .section .subsection .nav-user .image-container {
+  width: 23px;
+  aspect-ratio: 1/1;
+  height: 23px;
+}
+.navbar .section .subsection .nav-user .image-container img {
+  width: 100%;
+  height: 100%;
+  border-radius: 1000px;
+  background-color: black;
+}
+.navbar .section .subsection .nav-user .name {
+  font-weight: 500 !important;
+  font-size: 80%;
+}
 .navbar .account-section {
   justify-content: flex-end;
 }
