--- a/stylesheets/src/main.scss
+++ b/stylesheets/src/main.scss
@@ -174,6 +174,27 @@ a {
                 padding: 5px;
                 padding-top: 4px;
             }
+            .nav-user {
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                gap: 10px;
+                .image-container {
+                    width: 23px;
+                    aspect-ratio: 1 / 1;
+                    height: 23px;
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        border-radius: 1000px;
+                        background-color: black;
+                    }
+                }
+                .name {
+                    font-weight: 500 !important;
+                    font-size: 80%;
+                }
+            }
         }
     }
     .account-section {
