--- a/stylesheets/compiled/main.css
+++ b/stylesheets/compiled/main.css
@@ -95,7 +95,7 @@ a {
 }
 
 .disabled, .disabled:hover {
-  opacity: 0.2;
+  opacity: 0.6;
   cursor: default !important;
 }
 
@@ -104,7 +104,7 @@ a {
 }
 
 .tooltips {
-  color: orange !important;
+  color: rgb(136, 134, 36) !important;
 }
 
 .grouped-by {
@@ -134,6 +134,18 @@ a {
   padding: 0.5rem;
   border: 2px solid #0e0c0c;
   border-radius: 8px;
+}
+
+.main-page-image-container {
+  width: 25%;
+}
+.main-page-image-container img {
+  max-width: 100%;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 35%;
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 35%;
+  box-shadow: 10px 0px 15px 10px rgba(0, 0, 0, 0.3);
 }
 
 .navbar {
@@ -220,7 +232,7 @@ a {
   transform: translate(-50%, -50%);
   padding: 2rem;
   gap: 1rem;
-  background-color: black;
+  background-color: white;
   border: 2px solid #0e0c0c;
   border-radius: 8px;
   max-height: 90vh;
@@ -294,20 +306,6 @@ a {
   justify-content: space-between;
   width: 100%;
 }
-.options-list .progressions .option {
-  background-color: blue;
-}
-.options-list .option {
-  padding: 0.5rem;
-  border-radius: 8px;
-  border: 2px solid #0e0c0c;
-  background-color: #ca401d;
-  cursor: pointer;
-}
-.options-list .option:hover {
-  padding: calc(0.5rem + 1px);
-  border: 1px solid black;
-}
 .options-list .pages {
   flex-direction: row;
   justify-content: space-between;
@@ -320,7 +318,7 @@ a {
   align-items: flex-start;
   width: 90%;
   padding: 2rem;
-  background-color: black;
+  background-color: white;
   border: 2px solid #0e0c0c;
   border-radius: 8px;
   gap: 1rem;
@@ -365,7 +363,7 @@ a {
   width: 100%;
   gap: 0.5rem;
   padding: 0.5rem;
-  background-color: #ececec;
+  background-color: white;
   border: 2px solid #292524;
 }
 .data-section .list .record .row-two, .data-section .list .record .row-three, .data-section .list .record .row-four {
@@ -389,7 +387,7 @@ a {
   font-weight: normal !important;
   font-size: 70%;
   opacity: 0.8;
-  color: orange;
+  color: rgb(136, 134, 36);
 }
 .data-section .list .record .row-one textarea, .data-section .list .record .row-one .issue-textbox, .data-section .list .record .row-two textarea, .data-section .list .record .row-two .issue-textbox, .data-section .list .record .row-three textarea, .data-section .list .record .row-three .issue-textbox, .data-section .list .record .row-four textarea, .data-section .list .record .row-four .issue-textbox {
   width: 100%;
@@ -399,13 +397,13 @@ a {
 }
 .data-section .list .record .row-one input, .data-section .list .record .row-one .issue-textbox, .data-section .list .record .row-two input, .data-section .list .record .row-two .issue-textbox, .data-section .list .record .row-three input, .data-section .list .record .row-three .issue-textbox, .data-section .list .record .row-four input, .data-section .list .record .row-four .issue-textbox {
   padding: 0.5rem;
-  color: white;
+  color: #292524;
   background-color: transparent;
   border: none;
   outline: none;
 }
 .data-section .list .record .row-one input:focus, .data-section .list .record .row-one .issue-textbox:focus, .data-section .list .record .row-two input:focus, .data-section .list .record .row-two .issue-textbox:focus, .data-section .list .record .row-three input:focus, .data-section .list .record .row-three .issue-textbox:focus, .data-section .list .record .row-four input:focus, .data-section .list .record .row-four .issue-textbox:focus {
-  border: 2px solid white;
+  border: 2px solid #292524;
 }
 .data-section .list .record .record-controls {
   justify-content: flex-start;
