--- a/stylesheets/src/main.scss
+++ b/stylesheets/src/main.scss
@@ -7,6 +7,7 @@ $f-main: "Open Sans", sans-serif;
 $main-background: #ececec;
 $main-text: #292524;
 $riverbend-red: #ca401d;
+$tooltip-color: rgb(136, 134, 36);
 
 // -- Borders --
 $object-border: 2px solid darken($main-text, 10%);
@@ -91,14 +92,14 @@ a {
     }
 }
 .disabled, .disabled:hover {
-    opacity: 0.2;
+    opacity: 0.6;
     cursor: default !important;
 }
 .selected {
     border: 2px solid white;
 }
 .tooltips {
-    color: orange !important;
+    color: $tooltip-color !important;
 }
 .grouped-by {
     color: cyan !important;
@@ -125,7 +126,17 @@ a {
     padding: 0.5rem;
     border: $object-border;
     border-radius: $b-med;
-
+}
+.main-page-image-container {
+    width: 25%;
+    img {
+        max-width: 100%;
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 35%;
+        border-bottom-left-radius: 10px;
+        border-top-left-radius: 35%;
+        box-shadow: 10px 0px 15px 10px rgba(black, 0.3);
+    }
 }
 
 .navbar {
@@ -212,7 +223,7 @@ a {
     transform: translate(-50%, -50%);
     padding: 2rem;
     gap: 1rem;
-    background-color: black;
+    background-color: white;
     border: $object-border;
     border-radius: $b-med;
     max-height: 90vh;
@@ -284,20 +295,6 @@ a {
         flex-direction: row;
         justify-content: space-between;
         width: 100%;
-        .option {
-            background-color: blue;
-        }
-    }
-    .option { // Part of .progressions *and* .item
-        padding: 0.5rem;
-        border-radius: $b-med;
-        border: $object-border;
-        background-color: $riverbend-red;
-        cursor: pointer;
-        &:hover {
-            padding: calc(0.5rem + 1px);
-            border: $object-border-hover;
-        }
     }
     .pages {
         flex-direction: row;
@@ -312,7 +309,7 @@ a {
     align-items: flex-start;
     width: 90%;
     padding: 2rem;
-    background-color: black;
+    background-color: white;
     border: $object-border;
     border-radius: $b-med;
     gap: 1rem;
@@ -355,7 +352,7 @@ a {
             width: 100%;
             gap: 0.5rem;
             padding: 0.5rem;
-            background-color: $main-background;
+            background-color: white;
             border: 2px solid $main-text;
             .row-two, .row-three, .row-four {
                 display: none; // Default
@@ -377,7 +374,7 @@ a {
                     font-weight: normal !important;
                     font-size: 70%;
                     opacity: 0.8;
-                    color: orange;
+                    color: $tooltip-color;
                 }
                 textarea, .issue-textbox {
                     width: 100%;
@@ -387,12 +384,12 @@ a {
                 }
                 input, .issue-textbox {
                     padding: 0.5rem;
-                    color: white;
+                    color: $main-text;
                     background-color: transparent;
                     border: none;
                     outline: none;
                     &:focus {
-                        border: 2px solid white;
+                        border: 2px solid $main-text;
                     }
                 }
             }
