--- a/stylesheets/compiled/main.css
+++ b/stylesheets/compiled/main.css
@@ -151,7 +151,7 @@ a {
 .navbar {
   position: fixed;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
   top: 0;
@@ -159,13 +159,14 @@ a {
   background-color: white;
   border-bottom: 1px solid rgba(41, 37, 36, 0.5);
   gap: 2rem;
+  flex-wrap: wrap;
 }
 .navbar .section {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  width: 100%;
   gap: 1rem;
+  flex-wrap: wrap;
 }
 .navbar .section .subsection {
   flex-direction: row;
@@ -202,6 +203,7 @@ a {
   justify-content: center;
   align-items: center;
   gap: 10px;
+  padding: 0.5rem;
 }
 .navbar .section .subsection .nav-user .image-container {
   width: 23px;
@@ -222,6 +224,27 @@ a {
   justify-content: flex-end;
 }
 
+@media (max-width: 1000px) {
+  .navbar {
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 10px;
+  }
+}
+@media (max-width: 1000px) {
+  .navbar {
+    justify-content: center;
+    align-items: center;
+  }
+  .navbar .section, .navbar .account-section {
+    justify-content: center;
+    align-items: center;
+  }
+  .navbar .section .subsection, .navbar .account-section .subsection {
+    justify-content: center;
+    align-items: center;
+  }
+}
 .options-list {
   position: absolute;
   flex-direction: column;
