--- a/stylesheets/src/main.scss
+++ b/stylesheets/src/main.scss
@@ -142,7 +142,7 @@ a {
 .navbar {
     position: fixed;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     top: 0;
@@ -150,12 +150,13 @@ a {
     background-color: white;
     border-bottom: 1px solid rgba($main-text, 0.5);
     gap: 2rem;
+    flex-wrap: wrap;
     .section {
         flex-direction: row;
         justify-content: flex-start;
         align-items: center;
-        width: 100%;
         gap: 1rem;
+        flex-wrap: wrap;
         .subsection {
             flex-direction: row;
             justify-content: center;
@@ -190,6 +191,7 @@ a {
                 justify-content: center;
                 align-items: center;
                 gap: 10px;
+                padding: 0.5rem;
                 .image-container {
                     width: 23px;
                     aspect-ratio: 1 / 1;
@@ -210,6 +212,30 @@ a {
     }
     .account-section {
         justify-content: flex-end;
+    }
+}
+@media (max-width: 1000px) {
+    .navbar {
+        justify-content: flex-start;
+        align-items: flex-start;
+        gap: 10px;
+        .section, .account-section {
+            
+        }
+    }
+}
+@media (max-width: 1000px) {
+    .navbar {
+        justify-content: center;
+        align-items: center;
+        .section, .account-section {
+            justify-content: center;
+            align-items: center;
+            .subsection {
+                justify-content: center;
+                align-items: center;
+            }
+        }
     }
 }
 
