--- a/stylesheets/src/main.scss
+++ b/stylesheets/src/main.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css");
 
 // -- Fonts --
 $f-main: "Open Sans", sans-serif;
@@ -218,6 +219,7 @@ a {
             }
             &:hover #admin-dropdown {
                 display: flex;
+                z-index: 99 !important;
             }
             #admin-dropdown {
                 position: absolute;
@@ -233,7 +235,9 @@ a {
                 border: 1px solid red;
                 gap: 1rem;
                 flex-wrap: wrap;
-                z-index: 99 !important;
+                * {
+                    z-index: 99 !important;
+                }
                 .dropdown-section {
                     flex-direction: column;
                     min-width: 19%;
@@ -496,8 +500,7 @@ a {
             width: 100%;
             gap: 0.25rem;
             .record-label {
-                opacity: 0.75;
-                z-index: 5 !important;
+                color: rgb(109, 106, 106);
             }
             .record-input, .record-label {
                 $numberOfColumns: 8;
@@ -528,5 +531,102 @@ a {
         padding-top: 1rem;
         width: 100%;
         gap: 1rem;
+    }
+}
+
+.email-groups-form {
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 85%;
+    background-color: white;
+    border: 1px solid rgba($main-text, 0.5);
+    padding: 1rem;
+    .form {
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+        gap: 1rem;
+        .available-students, .new-group {
+            position: relative;
+            flex-direction: column;
+            border: 1px solid red;
+            border-radius: 3px;
+            padding: 0.25rem;
+            width: 60%;
+        }
+        .available-students {
+            width: 20%;
+        }
+        .student {
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            background-color: rgb(233, 231, 231);
+            padding: 5px;
+            border-radius: 4px;
+            .info {
+                flex-direction: column;
+                .name, .sid {
+                    font-size: 75%;
+                    font-weight: 300;
+                }
+                .name {
+                    font-weight: 500;
+                }
+            }
+            .img-container {
+                width: 30px;
+                aspect-ratio: 1 / 1;
+                height: 30px;
+                background-color: rgb(138, 138, 231);
+                border-radius: 3px;
+                cursor: pointer;
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+                &:hover {
+                    background-color: rgb(115, 115, 218);
+                }
+            }
+            &:hover {
+                cursor: grab !important;
+            }
+            &:active, &:focus {
+                cursor: grabbing !important;
+            }
+        }
+        .student-drop-hover {
+            position: relative;
+            &::after {
+                content: "";
+                position: absolute;
+                left: 0.25rem;
+                right: 0.25rem;
+                top: 0.25rem;
+                bottom: 0.25rem;
+                background-color: rgba(red, 0.1);
+                border-radius: 3px;
+            }
+            &:active, &:focus {
+                cursor: grabbing !important;
+            }
+        }
+        .new-group {
+            .student .img-container {
+                display: none;
+            }
+        }
+    }
+}
+@media (max-width: 1000px) {
+    .email-groups-form {
+        .form {
+            flex-direction: column;
+            .available-students, .new-group {
+                width: 100%;
+            }
+        }
     }
 }
